...
  final List<String> _searchList = [];

  ConcordiaFloor getDefaultFloor() {
    const defaultBuilding = ConcordiaBuilding(
      45.4972159,
      -73.5790067,
      'Hall Building',
      '1455 Boulevard de Maisonneuve O',
      'Montreal',
      'QC',
      'H3G 1M8',
      'H',
      ConcordiaCampus.sgw,
...

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      appBar: customAppBar(
        context,
        'Indoor Map',
      ),
      body: Stack(
        children: [
          Center(
            child: Image.asset(
              'assets/maps/indoor/Hall-1.png',
...
