...

  List<String> searchList = [];
  bool isKeyboardVisible = false;
  double? bottomInset = 0;
  bool first = false;

  final _yourLocationString = "Your Location";

  void getSearchList() {
    final buildings = _buildingViewModel.getBuildings();
    for (var building in buildings) {
      if (!searchList.contains(building)) {
        searchList.add(building);
...
              child: ElevatedButton(
                onPressed: _updatePath,
                style: ElevatedButton.styleFrom(
                  backgroundColor: Theme.of(context).colorScheme.primary,
                ),
                child: Text(
                  'Get Directions',
                  style:
                      TextStyle(color: Theme.of(context).colorScheme.onPrimary),
                ),
              ),
            ),
          if (_mapViewModel.destinationMarker != null)
...
        _mapViewModel.destinationMarker == null) {
      allMarkers.add(
        Marker(
          markerId: const MarkerId('poi_destination'),
          position: _poiDestinationLatLng!,
          infoWindow: InfoWindow(
            title: _selectedPlace?.name ?? 'Destination',
            snippet: _selectedPlace?.address ?? '',
          ),
        ),
      );
    }
    return allMarkers;
...
        ConnectionState.done,
        CameraPosition(target: LatLng(45.4940, -73.5784), zoom: 15),
      );
    }
    return MapLayout(
      mapWidget: Semantics(
        label: 'Google Map',
        child: GoogleMap(
          onMapCreated: _mapViewModel.onMapCreated,
          initialCameraPosition: camSnapshot.data!,
          zoomControlsEnabled: false,
          polylines: _mapViewModel.activePolylines,
          markers: allMarkers,
...
