...
typedef LoadStringFunction = Future<String> Function(String);

class BuildingRepository {
  static const ConcordiaBuilding h = ConcordiaBuilding(
      45.49721130711485,
      -73.5787529114208,
      "Hall Building",
      "1455 boul. de Maisonneuve O",
      "Montreal",
      "QC",
      "H3G 1M8",
      "H",
      ConcordiaCampus.sgw);

  static const ConcordiaBuilding lb = ConcordiaBuilding(
      45.496909873751406,
      -73.57820044547981,
      "J.W. McConnell Building",
      "1400 boul. de Maisonneuve O",
      "Montreal",
      "QC",
      "H3H 2V8",
      "LB",
      ConcordiaCampus.sgw);
...
