...
              ),
            ),
            Semantics(
              button: true,
              label: 'Apply selected color',
              child: ElevatedButton(
                child: const Text('APPLY'),
                onPressed: () {
                  // Apply the color change and update the preview
                  onColorChanged(pickerColor);
                  setState(() {
                    _updatePreviewTheme();
                  });
...
                                const SnackBar(
                                    content:
                                        Text('Theme updated successfully!')));
                          }
                        },
                        child: const Text(
                          'Save changes',
                          style: TextStyle(fontSize: 16),
                        ),
                      ),
                    ),
                  ),
                  const SizedBox(height: 16),
...
