...
    final secondaryTextColor =
        Theme.of(context).textTheme.bodyMedium?.color ?? Colors.grey;
    final dividerColor = Theme.of(context).dividerColor;

    return Scaffold(
      backgroundColor: backgroundColor,
      appBar: customAppBar(context, "Smart Planner"),
      body: Semantics(
        label:
            'Enter your tasks into the Smart Planner with a starting location to generate an optimized plan.',
        child: SingleChildScrollView(
          padding: const EdgeInsets.all(20.0),
          child: Column(
...
                  textAlignVertical: TextAlignVertical.top,
                  keyboardType: TextInputType.multiline,
                  maxLines: null,
                  cursorColor: primaryColor,
                  style: TextStyle(color: textColor),
                  decoration: InputDecoration(
                    hintText: "Create new plan...",
                    hintStyle:
                        TextStyle(color: secondaryTextColor, fontSize: 14),
                    border: InputBorder.none,
                  ),
                ),
              ),
...
                const EdgeInsets.symmetric(horizontal: 16.0, vertical: 12.0),
            minimumSize: const Size(150, 40),
          ),
          child: _isLoading
              ? CircularProgressIndicator(
                  color: Theme.of(context).colorScheme.onPrimary)
              : Text("Make Plan",
                  style: TextStyle(
                      color: Theme.of(context).colorScheme.onPrimary)),
        ),
      ),
      floatingActionButtonLocation: FloatingActionButtonLocation.endFloat,
    );
...
