...
          "${timeFormat.format(start.toLocal())} - ${timeFormat.format(end.toLocal())}",
        ),
      );
    }).toList();

    return Scaffold(
      appBar: customAppBar(context, "Generated Plan"),
      body: Semantics(
        label:
            'Generated plan view with an optimized timeline of events and free locations, including an option to get directions.',
        child: Padding(
          padding: const EdgeInsets.all(20.0),
          child: ListView(
...
