...
  // Main screen with tabs
  Widget _buildMainScreen(POIViewModel viewModel) {
    final backgroundColor = Theme.of(context).scaffoldBackgroundColor;

    return Scaffold(
      backgroundColor: backgroundColor,
      appBar: customAppBar(context, 'POI List'),
      body: Semantics(
        label:
            'Browse indoor and outdoor points of interest near the University.',
        child: Column(
          children: [
            _buildSearchBar(viewModel),
...
