...
  const ConcordiaCampus(super.lat, super.lng, super.name, super.streetAddress,
      super.city, super.province, super.postalCode, this.abbreviation);

  static const ConcordiaCampus sgw = ConcordiaCampus(
      45.49721130711485,
      -73.5787529114208,
      "Sir George Williams Campus",
      "1455 boul. de Maisonneuve O",
      "Montreal",
      "QC",
      "H3G 1M8",
      "SGW");

  static const ConcordiaCampus loy = ConcordiaCampus(
      45.45887506989712,
      -73.6404461142605,
      "Loyola Campus",
      "7141 rue Sherbrooke O",
      "Montreal",
      "QC",
      "H4B 1R6",
      "LOY");

...
