...
  bool _isMapDataLoaded = false;

  // Removed the separate FutureBuilder methods as they're now consolidated in the build method

  Semantics _buildGoogleMap(CameraPosition initialCameraPosition) {
    return Semantics(
      label: 'Google Map',
      child: GoogleMap(
        buildingsEnabled: false,
        onMapCreated: (GoogleMapController controller) {
          _mapViewModel.onMapCreated(controller);
        },
        initialCameraPosition: initialCameraPosition,
...
