...
              );
            },
            style: ElevatedButton.styleFrom(
              backgroundColor: const Color.fromRGBO(146, 35, 56, 1),
            ),
            child: const Text(
              'Directions',
              style: TextStyle(color: Colors.white),
            ),
          ),
        ],
      ),
    );
...
