appId: com.example.concordia_nav
---
- setLocation:
    latitude: 45.4895
    longitude: -73.7797
- launchApp:
    clearState: true
    permissions:
      android.permission.ACCESS_FINE_LOCATION: allow
      android.permission.ACCESS_COARSE_LOCATION: allow
      android.permission.ACCESS_BACKGROUND_LOCATION: allow
- assertVisible: "Concordia Campus Guide"
- tapOn: "SGW map"
- assertVisible: "Search..."
- tapOn: "Search..."
- assertVisible: "Hall Building"
- tapOn: "Hall Building"
- assertVisible: "Select"
- tapOn: "Select"
- assertVisible: "Google Map"
- assertVisible: "Get Directions"
- tapOn: "Get Directions"
- assertVisible: "Destination"
- assertVisible: "5 mins"
- tapOn: "5 mins"
- assertVisible: "2 mins"
- tapOn: "2 mins"
- swipe:
    start: "90%, 24%"
    end: "42%, 24%"
- swipe:
    start: "42%, 24%"
    end: "90%, 24%"
