appId: com.example.concordia_nav
---
- setLocation:
    latitude: 45.4895
    longitude: -73.7797
- launchApp:
    clearState: true
- assertVisible: "Concordia Campus Guide"
- tapOn:
    point: "7%,9%"
- assertVisible: "Accessibility"
- tapOn: "Accessibility"
- tapOn:
    point: "50%,15%"
- tapOn:
    point: "50%,20%"
- tapOn:
    point: "10%,22%"
- tapOn:
    point: "50%,50%"
- tapOn: "APPLY"
- tapOn: "Save changes"
- tapOn:
    point: "7%,9%"
- tapOn:
    point: "7%,9%"
- tapOn:
    point: "7%,9%"
