appId: com.example.concordia_nav
---
- setLocation:
    latitude: 45.4895
    longitude: -73.7797
- launchApp:
    clearState: true
- assertVisible: "Concordia Campus Guide"
- tapOn:
    point: "94%,9%"
- assertVisible: "Smart Planner"
- tapOn: "Create new plan..."
- inputText: "First, I have to attend a seminar at the J.W. McConnell Building from 9 am to 9:30 am. Second, I have a lecture in H 9.27 from 10:00 am to 11:00 am. Third, I'd like to go to a coffee shop for 30 minutes."
- tapOn: "Make Plan"
- assertVisible: "Generated Plan"
