appId: com.example.concordia_nav
---
- setLocation:
    latitude: 45.4885
    longitude: -73.8003
- launchApp:
    clearState: true
- assertVisible: "Find nearby facilities"
- tapOn: "Find nearby facilities"
- assertVisible: "POI List"
- assertVisible: Escalators
- tapOn: "Escalators"
- assertVisible: "John Molson School of Business - Escalators"
