appId: com.example.concordia_nav
---
- launchApp:
    clearState: true
- assertVisible: "Concordia Campus Guide"
- tapOn: "SGW map"
- assertVisible: "Sir George Williams Campus"
- assertVisible: "Google Map"
- tapOn:
    point: "45%,50%"
