appId: com.example.concordia_nav
---
- setLocation:
    latitude: 45.4895
    longitude: -73.7797
- launchApp:
    clearState: true
- assertVisible: "Concordia Campus Guide"
- assertVisible: "Indoor directions"
- tapOn: "Indoor directions"
- swipe:
    direction: UP
    duration: 2000
- swipe:
    direction: DOWN
    duration: 2000
- assertVisible: "Hall Building"
- tapOn: "Hall Building"
- assertVisible: "Hall Building"
- assertVisible: "Floor 1"
- tapOn: "Floor 1"
- assertVisible: "Select a classroom"
- assertVisible: "102-3"
- tapOn: "102-3"
- swipe:
    direction: RIGHT
    duration: 2000
- swipe:
    direction: LEFT
    duration: 2000
