appId: com.example.concordia_nav
---
- tapOn: "ConU Nav"
- assertVisible: "Indoor directions"
- tapOn: "Indoor directions"
- assertVisible: "Indoor Map"
- assertVisible: "Search location ..."
