appId: com.example.concordia_nav
---
- setLocation:
    latitude: 45.4874
    longitude: -73.7958
- launchApp:
    clearState: true
- assertVisible: "Home"
- setLocation:
    latitude: 45.497337
    longitude: -73.579033
- tapOn:
    point: "72%,74%"
- assertVisible: "Escalators"
- tapOn: "Escalators"
- assertVisible: "Floor plan of H-1"
- tapOn:
    point: "80%,55%"
    retryTapIfNoChange: false
- assertVisible: "Directions"
