appId: com.example.concordia_nav
---
- tapOn: "ConU Nav"
- tapOn:
    point: "7%,9%"
- assertVisible: "Settings"
- assertVisible: "My calendar"
- tapOn: "My calendar"
- assertVisible: "Preferences"
- tapOn: "Preferences"
