appId: com.example.concordia_nav
---
- launchApp:
    clearState : true
- assertVisible: "Concordia Campus Guide"
- tapOn:
    point: "7%,9%"
- assertVisible: "Settings"
- tapOn: "My calendar"
- runFlow:
    when:
      visible: "Calendar Link"
    commands:
      - tapOn: "Link"
      - tapOn: "Allow"
- assertVisible: "Calendar Selection"
