appId: com.example.concordia_nav
---
- launchApp:
    clearState : true
- assertVisible: "Concordia Campus Guide"
- tapOn:
    point: "7%,9%"
- assertVisible: "Settings"
- assertVisible: "Preferences"
- tapOn: "Preferences"
