appId: com.example.concordia_nav
---
- launchApp:
    clearState: true
- assertVisible: "Outdoor directions"
- tapOn: "Outdoor directions"
- assertVisible: "Sir George Williams Campus"
- assertVisible: Google Map
- assertVisible: "Your Location"
- assertVisible: "Enter Destination"
- swipe:
    direction: LEFT
    duration: 2000
- swipe:
    direction: RIGHT
    duration: 2000
